# vulkan-action-client

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.agents/skills/visual-qa/: SKILL.md
.agents/skills/visual-qa/agents/: openai.yaml
config/controls/: player_control_profile.json
config/scenes/: bootstrap.scene.json
content/animations/: sword_light_proxy.anim.json
content/characters/: basic_duelists.character.json
content/maps/: basic_primitive_arena.map.json
content/moves/: dodge.move.json  hit_reaction.move.json  light_attack.move.json  light_followup.move.json
docs/: AGENTS-v2.md  action_combat_engine_editor_design.md  agent-ticket-workflow-v2.md  agent-ticket-workflow.md  asset-authoring-contracts.md  control-profile.md  coordinator-state-template.md  game-editor-bootstrap-status.md  golden-trace-workflow.md  input-pipeline.md  main-project-dependency-graph.md  network-architecture.md  simulation-presentation-split.md  sprint-01-design-scope-cuts.md  sprint-01-implementation-plan.md  sprint-01-risk-mitigation-plan.md  sprint-02-implementation-plan.md  sprint-03-editor-ui-contract-matrix.md  sprint-03-implementation-plan.md
docs/codex-agent-workflow-v2/codex-agent-workflow-v2/: AGENTS-v2.md  MIGRATION.md  agent-communication-protocol-v2.md  coordinator-work-loop-v2.md  vulkan-agent-comms-README-v2.md  workflow-audit-and-redesign.md
docs/tickets/: RM1-001-local-asset-preflight.md  RM1-001-local-asset-preflight_result.md  RM1-002-compiled-network-e2e.md  RM1-002-compiled-network-e2e_result.md  RM1-003-cross-asset-validation.md  RM1-003-cross-asset-validation_result.md  RM1-004-scenario-visual-lab.md  RM1-004-scenario-visual-lab_result.md  SP1-001-cmake-ctest-spine.md  SP1-001-cmake-ctest-spine_result.md  SP1-002-host-cli-results.md  SP1-002-host-cli-results_result.md  SP1-003-characterization.md  SP1-003-characterization_result.md  SP1-004-authoring-scene-v0.md  SP1-004-authoring-scene-v0_result.md  SP1-005-runtime-world-fixed-tick.md  SP1-005-runtime-world-fixed-tick_result.md  SP1-006-move-schema-compiler.md  SP1-006-move-schema-compiler_result.md  SP1-007-combat-runtime-v0.md  SP1-007-combat-runtime-v0_result.md  SP1-008-primitive-combat-collision.md  SP1-008-primitive-combat-collision_result.md  SP1-009-proxy-animation-keyframes.md  SP1-009-proxy-animation-keyframes_result.md  SP1-010-scenario-runner-goldens.md  SP1-010-scenario-runner-goldens_result.md  SP1-011-visual-combat-lab.md  SP1-011-visual-combat-lab_result.md  SP1-012-command-script-map-wireframing.md  SP1-012-command-script-map-wireframing_result.md  SP2-001-combat-effects-damage-reactions.md  SP2-001-combat-effects-damage-reactions_result.md  SP2-001-intake-summary.md  SP2-001-intake-summary_result.md  SP2-002-character-definitions-spawn-ownership.md  SP2-002-character-definitions-spawn-ownership_result.md  SP2-003-golden-governance-update-workflow.md  SP2-003-golden-governance-update-workflow_result.md  (+13 more)
shaders/: scene.frag  scene.vert
src/: asset_fixture_check.cpp  combat_scenario_runner.cpp  game_editor.cpp  map_command_runner.cpp  scene_probe.cpp  toolchain_probe.cpp  udp_state_server.cpp  vulkan_scene_viewer.cpp
src/animation/: proxy_animation.cpp  proxy_animation.hpp
src/authoring/: map_command_script.cpp  map_command_script.hpp
src/combat/: combat_collision.cpp  combat_collision.hpp  combat_runtime.cpp  combat_runtime.hpp  combat_scenario.cpp  combat_scenario.hpp  combat_simulation.cpp  combat_simulation.hpp
src/config/: control_profile.cpp  control_profile.hpp
src/content/: authoring_scene.cpp  authoring_scene.hpp  move_asset.cpp  move_asset.hpp
src/host/: host_cli.cpp  host_cli.hpp
src/input/: glfw_control_bindings.cpp  glfw_control_bindings.hpp
src/network/: snapshot_client.cpp  snapshot_client.hpp  snapshot_relay.cpp  snapshot_relay.hpp  state_protocol.cpp  state_protocol.hpp  udp_socket.cpp  udp_socket.hpp
src/render/: scene_geometry.cpp  scene_geometry.hpp
src/scene/: scene_runtime.cpp  scene_runtime.hpp
src/simulation/: runtime_world.cpp  runtime_world.hpp
src/viewer/: viewer_camera.cpp  viewer_camera.hpp  viewer_options.cpp  viewer_options.hpp
src/visual_lab/: visual_lab.cpp  visual_lab.hpp
tests/: authoring_scene_tests.cpp  characterization_tests.cpp  combat_collision_tests.cpp  combat_runtime_tests.cpp  combat_scenario_tests.cpp  control_profile_tests.cpp  host_cli_tests.cpp  map_command_runner_tests.cpp  move_asset_tests.cpp  movement_behavior_tests.cpp  network_e2e_client.cpp  network_e2e_runner.cpp  network_protocol_tests.cpp  proxy_animation_tests.cpp  simulation_runtime_tests.cpp  snapshot_relay_tests.cpp  viewer_module_tests.cpp  visual_lab_tests.cpp
tests/fixtures/authoring/: duplicate_ids.map.json  invalid_collider.map.json  invalid_transform.map.json  invalid_world_bounds.map.json  missing_parent.map.json  missing_spawn_points.map.json
tests/fixtures/characterization/: bootstrap_scene_expected.json  protocol_packets_expected.json
tests/fixtures/commands/: wire_arena.commands.json
tests/fixtures/moves/: duplicate_track_ids.move.json  empty_cancel_destinations.move.json  invalid_tick_range.move.json  unknown_destination.move.json  unknown_tag.move.json  zero_tick_cycle.move.json
tests/fixtures/scenarios/: dodge_invulnerability_boundary.scenario.json  sword_light_cancel_on_hit.scenario.json  sword_light_hits_idle_target.scenario.json  sword_light_whiffs.scenario.json
tests/fixtures/scenarios/goldens/: dodge_invulnerability_boundary.golden.json  sword_light_cancel_on_hit.golden.json  sword_light_hits_idle_target.golden.json  sword_light_whiffs.golden.json
tools/: build.ps1  capture-scene-viewer.ps1  dev-shell.ps1  prepare-assets.ps1  run-scene-viewer.ps1  start-network-clients.ps1  start-udp-relay.ps1  test-network-e2e.ps1  test.ps1
